# project-horn

blink-in-midi/: .env.example  .gitignore  AGENTS.md  openapi.yaml  pyproject.toml
blink-in-midi/.specify/memory/: constitution.md
blink-in-midi/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
blink-in-midi/scripts/: smoke_check.sh
blink-in-midi/specs/001-midi-http-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
blink-in-midi/specs/001-midi-http-bridge/checklists/: requirements.md
blink-in-midi/specs/001-midi-http-bridge/contracts/: openapi.yaml
blink-in-midi/src/blink_midi/: __init__.py  cli.py  config.py  mapper.py  midi_listener.py  models.py  sender.py
blink-in-midi/tests/: conftest.py
blink-in-midi/tests/contract/: test_midi_events_contract.py
blink-in-midi/tests/integration/: test_midi_failure_recovery.py  test_midi_to_intent.py
blink-in-midi/tests/unit/: test_mapper.py  test_models.py  test_sender.py
zigbee-infra/: .dockerignore  .gitignore  AGENTS.md
zigbee-infra/.specify/memory/: constitution.md
zigbee-infra/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
zigbee-infra/docs/: components.md
zigbee-infra/infra/: docker-compose.yml
zigbee-infra/infra/control-api/: README.md  pyproject.toml
zigbee-infra/infra/zigbee2mqtt/: configuration.yaml
zigbee-infra/scripts/: brightness_jitter.py  install-ser2net.sh  reset-demo.sh  smoke-check.sh
zigbee-infra/specs/001-zigbee-demo-infra/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+10 files in other folders)
